--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -151,3 +151,21 @@
  raxasam_qawartian_colonization_desc:0 "Many of Raxasam people leave their densely populated homeland in order to settle in newly build settlements in Qawartian and Aroshasi peninsulas, which are sparsely populated despite their potential."
  raxasam_ending_auruvatan_domination:0 "Ending Auruvatan Domination"
  raxasam_ending_auruvatan_domination_desc:0 "Auruvata has been a threat to our people for far too long. Conquering the great cities of Bahramodšahr and Mexagam, they destroyed a delicate balance of power in the region, causing Frasatah to also increase their power. We must take the destiny in our own hands and show them what we are capable of."
+
+ dashavi_group_ideas:0 "Dashavi Minor Ideas"
+ dashavi_group_ideas_bonus:0 "Dashavi Minor Ambition"
+ dashavi_group_ideas_start:0 "Dashavi Minor Traditions"
+ dashavi_dashavi_silk:0 "Dashavi Silk"
+ dashavi_dashavi_silk_desc:0 "We were one of the first in this part of the world to embrace the silk clothing after the method of its production became known in the west. Cities such as Kolondax and Metzar are known in this part of the world as sources of high qualit textiles."
+ dashavi_our_new_home:0 "Our New Homes"
+ dashavi_our_new_home_desc:0 "Rise of the Varazahan led to many of our people settling in the newly conquered lands. They were assured of potential wealth and material rewards by Nusabat's heralds, but most of them were just empty promises. Nonetheless we found ourselves comfortable in our new home."
+ dashavi_pamkusean_remnants:0 "Pamkusean Remnants"
+ dashavi_pamkusean_remnants_desc:0 "Most Pamkuseans either assimilated under a threat of force or migrated north and west. The few which remained were nobles of higher status, which saw our rise as a potential investment opportunity."
+ dashavi_malagosan_shield:0 "Malagosan Shield"
+ dashavi_malagosan_shield_desc:0 "Malagosan is a massive mountain range, often described by visparaya poets as a divide between civilized Maqitan and barbarous Zakarturia. While Zakarturia is no more, the new threat in the form of the nomadic hordes still proves those ancient writers correct."
+ dashavi_coastal_settlements:0 "Coastal Settlements"
+ dashavi_coastal_settlements_desc:0 "Coastal settlements along our coast are few predominately fishing villages, but our great cities prove that it's not amount but the quality that matters. Kolondax, Huniyagar and Kistanzar compromise of large merchant castes and are vital to the naval prowess of our nation."
+ dashavi_asamani_liberty:0 "Asamani Liberty"
+ dashavi_asamani_liberty_desc:0 "Asamans were given large swats of land during the reign of Nezam Varazahan. This cascaded with even more privileges and in the current day the hold majority of power in the nation."
+ dashavi_national_zealotry:0 "National Zealotry"
+ dashavi_national_zealotry_desc:0 "Being underdog for most of history and only seen as a transitory region between 2 great civilizations, our people started to build a new national identity, mixing many Maqitan cultures and values, building something new and great."
