--- a/localisation/TD_01_flavour_aqerb_l_english.yml
+++ b/localisation/TD_01_flavour_aqerb_l_english.yml
@@ -102,7 +102,7 @@
  ignidunta_ideas_bonus:0 "Ingidunter Ambition"
  ignidunta_acerbic_pioneers:0 "Acerbic Pioneers"
  ignidunta_acerbic_pioneers_desc:0 "People of Ignidunta are from lineage of settlers from the times of emperor Saelius himself. He wanted to strengthen control in this part of his empire due to frequent clashes with local population. Over time, we achieved independence and expanded more and more into the peninsula. Soon after the legacy of our conquests was overshadowed by aggressive expansion of Enrique II. But we remember the time when it was us who ruled these lands."
- ignidunta_go_east:0 "Go east"
+ ignidunta_go_east:0 "Go East"
  ignidunta_go_east_desc:0 "Every merchant known that the farther your reach is, the more money you can earn as a middleman. This has been a mantra of many ignider rulers in the past and is followed to this day. Our merchants have maintain trade deals as far as Mesutia and Samadia."
  ignidunta_navarecipan_dockyards:0 "Dockyards of Navarecipa"
  ignidunta_navarecipan_dockyards_desc:0 "Navarecipa is not only our glorious capital, but also where the large majority of our ships are made. Vessels ranging from small fishing boats to massive trading Fleets are build there on a daily basis by experienced shipwrights."
@@ -113,7 +113,7 @@
  ignidunta_cutting_edge_innovations:0 "Eastern Innovations"
  ignidunta_cutting_edge_innovations_desc:0 "Trading in Pemenia has brought many innovations to our land like silk, 'toilet paper' and - most importantly - corned gunpowder. Thanks to its explosive properties it was quickly adopted by many military engineers and captains in our nation."
  ignidunta_government_and_its_people:0 "Government and the People"
- ignidunta_government_and_its_people_desc:0 "With republican tradition dating back to old camarian culture and introduction of merchant board system, the idea of democracy became very popular not only among our population but also the ruling elite, seeing it as a way to understand needs of the country for prosperity and patriotism."
+ ignidunta_government_and_its_people_desc:0 "With republican tradition dating back to old Camarian culture and introduction of merchant board system, the idea of democracy became very popular not only among our population but also the ruling elite, seeing it as a way to understand needs of the country for prosperity and patriotism."
 
  pistoleros_reform:0 "Pistoleros"
  pistoleros_reform_desc:0 "Early adoption of blackpowder weaponry in the military allowed us to gain advantage over our enemies."
