--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -407,7 +407,7 @@
  xifang_rebels_army:0 "$RELIGION$ Army"
  xifang_rebels_demand:0 "Convert $COUNTRYNAME$"
 
- cach_moi:0 "Cach Moi"
+ cach_moi:0 "Cách mói"
  cach_moi_religion_desc:0 "People of Voitak and all of southern Pemenia have a strong attachment to their local legends and myths which they integrate into the Hengtuan cosmology.\nAll Hengtuan religions share a concept of Zheng, which represents ruler's legitimacy, competency and approval by heaven, but many scholars disagree on what is the most blessed government."
  cach_moi_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  cach_moi_rebels_title:0 "Religious"
