--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2507,7 +2507,7 @@
  PROV2506:0 "Puntatyen"
  PROV2507:0 "Panaku"
  PROV2508:0 "Notepa"
- PROV2509:0 "2509"
+ PROV2509:0 "Baraqhaz"
  PROV2510:0 "Jikana"
  PROV2511:0 "Nawula"
  PROV2512:0 "2512"
