khmer cultures complete + loc

--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -493,3 +493,13 @@
  savpa:0 "Savpa"
  aemnkhong:0 "Aemnkhong"
  khedphu:0 "Khedphu"
+
+ thboira_group:0 "Thboira"
+ touichloi:0 "Touicholi"
+ anchphlu:0 "Anchphlu"
+ chueyat:0 "Chueyat"
+ preinous:0 "Preinous"
+
+ ajitengala_group:0 "Ajitengala"
+ anakapa:0 "Anakapa"
+ apiumau:0 "Apiumau"
