--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -850,6 +850,7 @@
  thangphan_area:0 "Thangphan"
  siviav_area:0 "Siviav"
  phuhuk_area:0 "Phuhuk"
+ pemtitik_area:0 "Pemtitik"
 
  nteviav_area:0 "Nteviav"
  nasrupatyaka_area:0 "Nasrupatyaka"
@@ -864,3 +865,24 @@
  xabliaj_area:0 "Xabliaj"
  pemubtus_area:0 "Pemubtus"
  thajan_area:0 "Thajan"
+
+ chnpi_isles_area:0 "Chnpi Isles"
+ chit_isles_area:0 "Chit Isles"
+ katne_isles_area:0 "Katne Isles"
+ ubatvi_area:0 "Ubatvi"
+ tonle_area:0 "Tonle"
+ khdei_area:0 "Khdei"
+ sangbab_area:0 "Sangbab"
+ chamkat_area:0 "Chamkat"
+ nowloh_area:0 "Nowloh"
+
+ cheden_area:0 "Cheden"
+ samunero_area:0 "Samunero"
+ teahner_area:0 "Teahner"
+ bartuk_area:0 "Bartuk"
+ hnakro_area:0 "Hnakro"
+ neireung_area:0 "Neireung"
+ reatheni_area:0 "Reatheni"
+ nochnea_area:0 "Nochnea"
+ lohnle_area:0 "Lohnle"
+ luavph_area:0 "Luavph"
