--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -94,3 +94,5 @@
  dagiligi_region:0 "Dagiligi"
  south_western_amin_ocean_region:0 "South-Western Amin Ocean"
  western_pisachaian_ocean_region:0 "Western Pisachaian Ocean"
+ pipobsa_region:0 "Pipobsa"
+ tukyeung_region:0 "Tukyeung"
