--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -41,3 +41,21 @@
  mazavasi_administration_reforms_desc:0 "With corruption becoming more of an issue within our society, our High Priest declared it a Sin, and so we followed with appropriate reform to combat the issue."
  mazavasi_gunpowder_innovations:0 "Gunpowder Innovations"
  mazavasi_gunpowder_innovations_desc:0 "With amount of universities and engineers in our region, which we owe to our religious and cultural circumstances, combined with fast adaptation of gunpowder in our homeland, we managed to improve gunpowder used in our cannons, making them more powerful."
+
+ samadian_group_ideas:0 "Samadian Minor Ideas"
+ samadian_group_ideas_bonus:0 "Samadian Minor Ambition"
+ samadian_group_ideas_start:0 "Samadian Minor Tradition"
+ samadia_restore_cotton_trade:0 "Restore Cotton Trade"
+ samadia_restore_cotton_trade_desc:0 "Diminishing power of our protector in the north and the capture of Paredeshian farmlands led to increased demand for local cotton production, which will greatly benefit us."
+ samadia_kharken_infantry:0 "Kharken Infantry"
+ samadia_kharken_infantry_desc:0 "This formation started as a copy of the infantry used to combat the steppe nomads in the north, but was adapted in order to have more offensive capabilities with use of a musket."
+ samadia_land_of_temples:0 "Land of Temples"
+ samadia_land_of_temples_desc:0 "Some temples in Samadia are older than many dynasties, cities and states. They serve not only spiritual function, but are often centers of the community and seats of local power."
+ samadia_welcome_the_taedians:0 "Welcome to Taedians"
+ samadia_welcome_the_taedians_desc:0 "Taedian merchants gladly buy our products even at increased prices, which greatly benefits not only our merchants, but also the production sector - farmers, weavers, glassmakers and plantation owners."
+ samadia_sahiranika:0 "Sahiranika"
+ samadia_sahiranika_desc:0 "Increased wealth and rising demand for processed produce, many of the rural folk started emigrating to cities where they hope to find even more success."
+ samadia_reformed_vibagha_system:0 "Reformed Vibagha System"
+ samadia_reformed_vibagha_system_desc:0 "Ancient system of greatly dividing the land between trusted dynasties worked for a long time, but many now embrace a more systematic control over their domain."
+ samadia_thousand_river_dances:0 "Thousand River Dances"
+ samadia_thousand_river_dances_desc:0 "A strong sense of local cultural identity led to every town and village having their own local dance which is used to preserve folk tales and traditions."
