Final Fixes for Disaster
Imploding empire with mind

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -532,6 +532,7 @@
  disaster_sis_decay.1.desc:0 " "
  disaster_sis_decay.1.a:0 "May god have mercy on us"
  TD_SIS_Prince_Bonuses:0 "Decay in the Second Empire"
+ SIS_DECAY_WARNING_TT:0 "§YIf we have less than 5 subjects or 450 total subject and our development, the empire will collapse.§!"
  
  disaster_sis_decay.2.t:0 "End of Internal Decay in the Second Empire"
  disaster_sis_decay.2.desc:0 " "
@@ -725,6 +726,7 @@
  TD_SIS_Establish_Permanent_Diet:0 "Established Permanent Diet"
  TD_SIS_Decay_Unlock_Call_Imperial_diet_decision_tt:0 "Unlocks "§PHold Imperial Diet§!" decision"
  decision_hold_diet_sis_title:0 "Hold Imperial Diet"
+ TD_SIS_Holding_the_diet:0 "Holding the Imperial Diet"
  TD_SIS_Decay_Unlock_Saelian_Council_decision_tt:0 "Unlocks "§PEstablish Saelian Council§!" decision"
  decision_sis_decay_establish_saelian_council_title:0 "Establish Saelian Council"
  TD_SIS_Establish_Saelian_Council:0 "Established Saelian Council"
