--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -703,7 +703,7 @@
  pravekava_area:0 "Pravekava"
  madbindu_area:0 "Madbindu"
  khore_area:0 "Khore"
- janma_area:0 "Janma"
+ japma_area:0 "Japma"
  phakta_area:0 "Phakta"
  biyhara_area:0 "Biyhara"
  medana_area:0 "Medana"
