--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -700,7 +700,7 @@
  PROV699:0 "Neurech"
  PROV700:0 "Redingen"
  PROV701:0 "Sendiegen"
- PROV702:0 "702"
+ PROV702:0 "Ubrasaman"
  PROV703:0 "Topochy"
  PROV704:0 "704"
  PROV705:0 "Sepretola"
@@ -1813,7 +1813,7 @@
  PROV1812:0 "Maskazhi"
  PROV1813:0 "Giziziib"
  PROV1814:0 "1814"
- PROV1815:0 "1815"
+ PROV1815:0 "Niltalami Gulf"
  PROV1816:0 "Dakhani Tip"
  PROV1817:0 "1817"
  PROV1818:0 "1818"
@@ -2705,7 +2705,7 @@
  PROV2704:0 "2704"
  PROV2705:0 "Khuruulvar"
  PROV2706:0 "Gemek"
- PROV2707:0 "2707"
+ PROV2707:0 "Saen-Sakhan Coast"
  PROV2708:0 "Agavas"
  PROV2709:0 "Parsatkai"
  PROV2710:0 "Herril"
@@ -2923,9 +2923,9 @@
  PROV2922:0 "2922"
  PROV2923:0 "2923"
  PROV2924:0 "2924"
- PROV2925:0 "2925" #!?
+ PROV2925:0 "2925"
  PROV2926:0 "2926"
- PROV2927:0 "2927"
+ PROV2927:0 "Nai Bay"
  PROV2928:0 "2928"
  PROV2929:0 "2929"
  PROV2930:0 "2930"
@@ -2938,7 +2938,7 @@
  PROV2937:0 "2937"
  PROV2938:0 "2938"
  PROV2939:0 "2939"
- PROV2940:0 "2940"
+ PROV2940:0 "Pemtitikian Bay"
  PROV2941:0 "2941"
  PROV2942:0 "2942"
  PROV2943:0 "2943"
@@ -2949,7 +2949,7 @@
  PROV2948:0 "2948"
  PROV2949:0 "2949"
  PROV2950:0 "2950"
- PROV2951:0 "2951"
+ PROV2951:0 "Touicholi Coast"
  PROV2952:0 "2952"
  PROV2953:0 "2953"
  PROV2954:0 "2954"
@@ -2962,8 +2962,8 @@
  PROV2961:0 "2961"
  PROV2962:0 "2962"
  PROV2963:0 "2963"
- PROV2964:0 "2964"
- PROV2965:0 "2965"
+ PROV2964:0 "Gujtkbetsian Coast"
+ PROV2965:0 "Tamjuqian Strait"
  PROV2966:0 "2966"
  PROV2967:0 "2967"
  PROV2968:0 "2968"
@@ -3375,7 +3375,7 @@
  PROV3374:0 "Dazan"
  PROV3375:0 "3375"
  PROV3376:0 "Mugden"
- PROV3377:0 "3377"
+ PROV3377:0 "Riboxian"
  PROV3378:0 "Saihoi"
  PROV3379:0 "Yauhau"
  PROV3380:0 "Taailun"
@@ -3519,20 +3519,20 @@
  PROV3518:0 "3518"
  PROV3519:0 "3519"
  PROV3520:0 "Kathsrpa"
- PROV3521:0 "3521"
+ PROV3521:0 "Daskivistar"
  PROV3522:0 "3522"
- PROV3523:0 "3523"
- PROV3524:0 "3524"
- PROV3525:0 "3525"
- PROV3526:0 "3526"
+ PROV3523:0 "Tilaf"
+ PROV3524:0 "Nadivi"
+ PROV3525:0 "Bgosan"
+ PROV3526:0 "Atuma"
  PROV3527:0 "3527"
  PROV3528:0 "3528"
  PROV3529:0 "3529"
  PROV3530:0 "3530"
- PROV3531:0 "3531"
- PROV3532:0 "3532"
- PROV3533:0 "3533"
- PROV3534:0 "3534"
+ PROV3531:0 "Sitrama"
+ PROV3532:0 "Sitrama"
+ PROV3533:0 "Nadivi"
+ PROV3534:0 "Nadivi"
  PROV3535:0 "3535"
  PROV3536:0 "Savejena"
  PROV3537:0 "Holofira"
@@ -3583,7 +3583,7 @@
  PROV3582:0 "3582"
  PROV3583:0 "3583"
  PROV3584:0 "Pranda"
- PROV3585:0 "3585"
+ PROV3585:0 "Suntaba"
  PROV3586:0 "Pakaktra"
  PROV3587:0 "Gandhasit"
  PROV3588:0 "Aviccharnu"
@@ -3793,7 +3793,7 @@
  PROV3792:0 "3792"
  PROV3793:0 "3793"
  PROV3794:0 "Abugrehat"
- PROV3795:0 "3795"
+ PROV3795:0 "Maktan"
  PROV3796:0 "3796"
  PROV3797:0 "3797"
  PROV3798:0 "3798"
