--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -205,3 +205,21 @@
  felderia_absolute_centralisation_desc:0 "Small Bogilish lords were always a menace for anyone trying to control these lands. If we want to survive, we need to crack down on their privileges to show them who is really in charge of this nation."
  felderia_royal_munition_manufactories:0 "Royal Munition Manufactories"
  felderia_royal_munition_manufactories_desc:0 "Thanks to the large copper, sulfur and salt deposits in these areas we were able to secure large-scale munition manufactories which proved to be greatly beneficial in the development of siege and battle cannons."
+ 
+ snaiwatzer_nation_ideas:0 "Snaiwatzer Ideas"
+ snaiwatzer_nation_ideas_start:0 "Snaiwatzer Traditions"
+ snaiwatzer_nation_ideas_bonus:0 "Snaiwatzer Ambition"
+ snaiwatzer_metal_trade_hegemony:0 "Metal Trade Hegemony"
+ snaiwatzer_metal_trade_hegemony_desc:0 "Cacumuds are rich with iron, coal, silver and even gold. Natural position of our country combined with the fact that our nation's most popular profession is mining, we achieved total domination of metal trade in Silvestria."
+ snaiwatzer_peasant_influences:0 "Peasant Influences"
+ snaiwatzer_peasant_influences_desc:0 "Stories of liberal republics in the south has sparked a dream of a democratic state, especially in lower social classes. They have worked hard to help us realize this, and with many revolutionary ideas from the south accelerating the societal reforms within our country, we might as well listen to them."
+ snaiwatzer_high_altitude_defenses:0 "High Altitude Defenses"
+ snaiwatzer_high_altitude_defenses_desc:0 ""Living across the continental divide, with our influences spreading from peaks to piedmont, we have naturally developed our defense fortifications accordingly with the terrain, making them one of the best mountain fortresses in the entire Taedium."
+ snaiwatzer_mountain_folk:0 "Mountain Folk"
+ snaiwatzer_mountain_folk_desc:0 "Long time have passed since our Zbojaner ancestors came here, and in effect, we aren't truly only Zbojaner, or Silvestrine, we are a mix of both, and that what makes us, Snaiwatzer people, unique, and our nobility prides itself in it."
+ snaiwatzer_new_imperial_mint:0 "New Imperial Mint"
+ snaiwatzer_new_imperial_mint_desc:0 "When the Imperial Mint of Limburg depleted, the emperor established a new mint in our lands, in the very heart of it, between the Cacumudian mountain range, in Grobhalde, and after years of running it, we have learned many lessons on managing a mint."
+ snaiwatzer_improved_gunmaking:0 "Improved Gunmaking"
+ snaiwatzer_improved_gunmaking_desc:0 "Our iron and steel being one of the best in the entire Silvestria, or maybe even entire Taedium, and with echoes of gunpowder warfare getting into our court, we have started to improve our gunmaking, creating one of the most durable guns in our century."
+ snaiwatzer_reformed_lawmaking:0 "Reformed Lawmaking"
+ snaiwatzer_reformed_lawmaking_desc:0 "With relative peace that Cacumuds provided to our lands from the south, and avoiding many wars that have plagued the imperial lands to the north, we had started investing our time into lawmaking more than warfare, and with southern ideas still alive in our country, we created one of more refined law codex in the history of Silvestria."
