--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -282,6 +282,8 @@
  NRD_ADJ:0 "Nordmarker"
  FLD:0 "Felderia"
  FLD_ADJ:0 "Felder"
+ SNA:0 "Snaiwatz"
+ SNA_ADJ:0 "Snaiwatzer"
 
  BOH:0 "Bohemia"
  BOH_ADJ:0 "Bohemian"
