--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -153,3 +153,7 @@
 
  pitsitoga_nation_title:0 "Restore Pitsitoga @PIT"
  pitsitoga_nation_desc:0 "Great Kingdom of Pitsitoga once controlled all trade in this part of the world, but due to internal corruption and strife for power it fell apart, left to be conquered by outsiders."
+ 
+ snaiwatz_nation_title:0 "Unite Snaiwatz @SNA"
+ snaiwatz_nation_desc:0 "We were disunited for too long. Now it's time to unite, so we can focus more on digging."
+ all_snaiwatzer_provinces_claims_tt:0 "§Y[Root.GetName]§! gains a permanent claim on all Snaiwatzer provinces."
