polynesia south isle

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1325,3 +1325,9 @@
  THC_ADJ:0 "Thchaonese"
  VAO:0 "Vaoaming"
  VAO_ADJ:0 "Vaoamingi"
+ KNK:0 "Kaniskate"
+ KNK_ADJ:0 "Kaniskatian"
+ PEN:0 "Penkayu"
+ PEN_ADJ:0 "Penkayuan"
+ APU:0 "Apuyubat"
+ APU_ADJ:0 "Apuyubatian"
