--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -347,7 +347,7 @@
  musatemara_area:0 "Musatemara"
  urmadin_area:0 "Urmadin"
  maqitan_isles_area:0 "Maqitan Islands"
- mustir_coast_area:0 "Mustir Coast"
+ dimaryan_area:0 "Dimaryan"
  sayaanud_area:0 "Sayaanud"
  tunihar_area:0 "Tunihar"
  mustir_pass_area:0 "Mustir Pass"
