--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -5,7 +5,7 @@
  ifritican:0 "Ifritican"
  riyadunic:0 "Riyadunic"
  altaqadimi:0 "Altaqadimi"
- antawilian:0 "Antawilian"
+ anjigar:0 "Anjigar"
  ardwajdi:0 "Ardwajdi"
 
  pohjoista_group:0 "Pohjoista"
