--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1331,3 +1331,18 @@
  PEN_ADJ:0 "Penkayuan"
  APU:0 "Apuyubat"
  APU_ADJ:0 "Apuyubatian"
+
+ MAB:0 "Mabifriz"
+ MAB_ADJ:0 "Mabifrizian"
+ ARS:0 "Arsalam"
+ ARS_ADJ:0 "Arsalami"
+ USN:0 "Usnal"
+ USN_ADJ:0 "Usnali"
+ HAA:0 "Hašradar"
+ HAA_ADJ:0 "Hašradari"
+ ARA:0 "Aragsin"
+ ARA_ADJ:0 "Aragsinian"
+ SRK:0 "Šarikullu"
+ SRK_ADJ:0 "Šarikullan"
+ DES:0 "Desanaux"
+ DES_ADJ:0 "Desanauxian"
