--- a/localisation/TD_subject_types_l_english.yml
+++ b/localisation/TD_subject_types_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  trade_dependency:0 "Trade Dependency"
- trade_dependency_long_desc:0 "Trade Dependency is a state that is economically on their Merchant overlord"
+ trade_dependency_long_desc:0 "Trade Dependency is a state whose imports and exports are largely dependant on a nearby merchant empire."
  trade_dependency_is_our:0 "$NAME|Y$ is a trade dependency of us"
  trade_dependency_title:0 "Trade Dependency"
  trade_dependency_title_plural:0 "Trade Dependencies"
