--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -661,6 +661,8 @@
 
  VIP:0 "Visparaya"
  VIP_ADJ:0 "Visparayan"
+ VIP2:0 "Vipsaryana"
+ VIP2_ADJ:0 "Vipsaryana"
  VAZ:0 "Varazanah"
  VAZ_ADJ:0 "Varazan"
 
