nifthem culture rework

--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -49,9 +49,9 @@
  niftrand:0 "Niftrand"
 
  nifthemian_group:0 "Nifthemic"
- nifthemian:0 "Nifthemian"
- redei:0 "Redei"
- vementi:0 "Vementi"
+ kloerde:0 "Kloerde"
+ achtveldi:0 "Achtveldi"
+ weesfani:0 "Weesfani"
 
  argenic_group:0 "Argenic"
  argenian:0 "Argenian"
