south khmer + names for cultures

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1348,3 +1348,13 @@
  SRK_ADJ:0 "Šarikullan"
  DES:0 "Desanaux"
  DES_ADJ:0 "Desanauxian"
+ BAU:0 "Baungihi"
+ BAU_ADJ:0 "Baungihian"
+ CDH:0 "Chedho"
+ CDH_ADJ:0 "Chedhoian"
+ MSR:0 "Measrang"
+ MSR_ADJ:0 "Measrangi"
+ ROD:0 "Rodsjewa"
+ ROD_ADJ:0 "Rodsjewan"
+ RPA:0 "Rupaborsa"
+ RPA_ADJ:0 "Rupaborsan"
