--- a/localisation/TD_01_flavour_aqerb_l_english.yml
+++ b/localisation/TD_01_flavour_aqerb_l_english.yml
@@ -39,7 +39,7 @@
  idea_pistoleros:0 "The Pistoleros"
  idea_pistoleros_desc:0 "It is known that the war is the most important factor of scientific advancements. We are the the masters of war, which means that our technology must be superior. Thanks to the efforts of Ramiro de Balucarra the blackpowder was introduced in the battlefield, and with it a new formation of pistoleros, effective troops with low maintenance and training time."
  idea_cultural_inspiration:0 "Cultural assimilation"
- idea_cultural_inspiration_desc:0 "As our people were settling these lands, one thing became obvious - cultural mixing. Yaltazim men married narbonese women and saelian farmers worked alongside farmers from Altaliqadim. This exchange of ideas opened minds of many of our people, subjecting them to new ways of living and thinking."
+ idea_cultural_inspiration_desc:0 "As our people were settling these lands, one thing became obvious - cultural mixing. Yaltazim men married narbonese women and saelian farmers worked alongside farmers from Altaharan. This exchange of ideas opened minds of many of our people, subjecting them to new ways of living and thinking."
  idea_estate_council:0 "Estate Council"
  idea_estate_council_desc:0 "Decentralized administration has granted estates of our nation even more power than they had in the acerbic homeland. To achieve compromise between clashing forces of estates and the crown, councils started to become a common thing in these areas. Not long after, the idea of ruler and estates working together is seen as obvious, creating greater trust in the government."
 
@@ -79,9 +79,9 @@
  AQERB_family_bonds:0 "Family Bonds"
  AQERB_family_bonds_desc:0 "What is more important than family? According to aqerbic, only the true God. Lesser family members who have a slim chance of inheriting anything meaningful often pursue a scholarly or military careers. This helps to keep the power within the elite, as they are both the rulers and advisors."
 
- nahralnoriyan_ideas:0 "Nahralnoriyan ideas"
- nahralnoriyan_ideas_start:0 "Nahralnoriyan Traditions"
- nahralnoriyan_ideas_bonus:0 "Nahralnoriyan Ambition"
+ nahshaharosian_ideas:0 "Nahshaharosian ideas"
+ nahshaharosian_ideas_start:0 "Nahshaharosian Traditions"
+ nahshaharosian_ideas_bonus:0 "Nahshaharosian Ambition"
  nahralnoriya_western_expeditions:0 "Western Expeditions"
  nahralnoriya_western_expeditions_desc:0 "The desire to cross the Niheyan Ocean is not new. Many expeditions attempted to cross the ocean in the past, most notably fleet of 'Ard Yanduz in the VII century. With the advancements in the naval technology and more pragmatic reasons to explore what lies beyond the western horizon we may finally see what new world lies across the sea."
  nahralnoriya_advanced_irrigation:0 "Advanced Irrigation"
@@ -91,7 +91,7 @@
  nahralnoriya_university_of_alradom:0 "Alradom University"
  nahralnoriya_university_of_alradom_desc:0 "Alradom is the site of the oldest university in this part of the world. It was founded in the VII century during the rule of Yanduz over Aqerb, but the city itself was an important center of innovation in the region. Greates mathematical minds of our times have studied there, bringing innovation not only to ourselves, but to the entire world."
  nahralnoriya_bridge_to_the_new_world:0 "Bridge to the New World"
- nahralnoriya_bridge_to_the_new_world_desc:0 "Our early advancements in Chantlia are paying off. We were first to set up important trade routes and deals with natives, practically monopolizing trade with the New World. Gold, tobacco, cocoa and cotton flow through Nahralnoriya daily, bringing prosperity to our people."
+ nahralnoriya_bridge_to_the_new_world_desc:0 "Our early advancements in Chantlia are paying off. We were first to set up important trade routes and deals with natives, practically monopolizing trade with the New World. Gold, tobacco, cocoa and cotton flow through Nahshaharos daily, bringing prosperity to our people."
  nahralnoriya_protector_of_aqerb:0 "Protector of Aqerb"
  nahralnoriya_protector_of_aqerb_desc:0 "Saelians think they can conquer people of yaltazim withouth any repercussions. They are partially true - for most of the time the peninsula was disunited and easy to conquer. If we don't want to be destroyed by the invaders, we must unite our people under common banner and show that we are the true rulers of Aqerb!"
  nahralnoriya_spread_true_word:0 "Spread the True Word"
