--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -3,10 +3,11 @@
  arkabili:0 "Arkabili"
  west_aqerbic:0 "West Aqerbic"
  ifritican:0 "Ifritican"
- riyadunic:0 "Riyadunic"
- altaqadimi:0 "Altaqadimi"
+ altawarani:0 "Altawarani"
+ altaharani:0 "Altaharani"
  anjigar:0 "Anjigar"
  ardwajdi:0 "Ardwajdi"
+ gandari:0 "Gandari"
 
  pohjoista_group:0 "Pohjoista"
  uzkolian:0 "Uzkolian"
