--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -69,15 +69,15 @@
  LOU:0 "Lounavalvur"
  LOU_ADJ:0 "Lounavalvic"
 
- ALT:0 "Altaliqadim"
- ALT_ADJ:0 "Altaliqadimi"
- NAH:0 "Al-Nahralnoriya"
- NAH_ADJ:0 "Nahralnoriyan"
- RIY:0 "Riyaduna"
- RIY_ADJ:0 "Riyadun"
- ALG:0 "Algharbiya"
- ALG_ADJ:0 "Algharbiyan"
- IFR:0 "Al-Ifrita"
+ ALT:0 "Altaharan"
+ ALT_ADJ:0 "Altaharani"
+ NAH:0 "Nahshaharos"
+ NAH_ADJ:0 "Nahshaharosian"
+ RIY:0 "Ridyahan"
+ RIY_ADJ:0 "Ridyahani"
+ ALG:0 "Algshabaldan"
+ ALG_ADJ:0 "Algshabaldani"
+ IFR:0 "Ifritica"
  IFR_ADJ:0 "Ifritican"
  HAM:0 "Hamidar"
  HAM_ADJ:0 "Hamidari"
@@ -1358,3 +1358,7 @@
  ROD_ADJ:0 "Rodsjewan"
  RPA:0 "Rupaborsa"
  RPA_ADJ:0 "Rupaborsan"
+ DUH:0 "Dushmira"
+ DUH_ADJ:0 "Dushmiran"
+ KRA:0 "Kramdatr"
+ KRA_ADJ:0 "Kramdatrian"
