--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -72,7 +72,7 @@
  PROV_ADJ71:0 "Baluqara"
  PROV_ADJ72:0 "Altariqum"
  PROV_ADJ73:0 "Hanisuar"
- PROV_ADJ74:0 "Riyaduna"
+ PROV_ADJ74:0 "Ridyahan"
  PROV_ADJ75:0 "Rizqal"
  PROV_ADJ76:0 "Qafqumir"
  PROV_ADJ77:0 "SAHILA"
