--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -72,7 +72,7 @@
  PROV71:0 "Baluqara"
  PROV72:0 "Altariqum"
  PROV73:0 "Hanisuar"
- PROV74:0 "Riyaduna"
+ PROV74:0 "Ridyahan"
  PROV75:0 "Rizqal"
  PROV76:0 "Qafqumir"
  PROV77:0 "SAHILA"
@@ -342,7 +342,7 @@
  PROV341:0 "Uzkolian Coast"
  PROV342:0 "Tinumava"
  PROV343:0 "Peleksmezs"
- PROV344:0 "Riyadunic Coast"
+ PROV344:0 "Ridyahani Coast"
  PROV345:0 "Blazma"
  PROV346:0 "Hercegaosta"
  PROV347:0 "Sea of Laima"
