country + history fixes + flags

--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -5,9 +5,10 @@
  ifritican:0 "Ifritican"
  altawarani:0 "Altawarani"
  altaharani:0 "Altaharani"
- anjigar:0 "Anjigar"
  ardwajdi:0 "Ardwajdi"
  gandari:0 "Gandari"
+ dafdan:0 "Dafdan"
+ maqhazian:0 "Maqhazian"
 
  pohjoista_group:0 "Pohjoista"
  uzkolian:0 "Uzkolian"
@@ -127,7 +128,6 @@
  hafani:0 "Hafani"
  musatemaran:0 "Musatemaran"
  pusgivah:0 "Pusgivah"
- lamedinian:0 "Lamedinian"
  frankrani:0 "Frankrani"
 
  almurtafan_group:0 "Almurtafan"
@@ -504,3 +504,9 @@
  ajitengala_group:0 "Ajitengala"
  anakapa:0 "Anakapa"
  apiumau:0 "Apiumau"
+
+ baduan_group:0 "Baduan"
+ anjigar:0 "Anjigar"
+ azguran:0 "Azguran"
+ braissli:0 "Braissli"
+ lamedinian:0 "Lamedinian"
